<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_30sdp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/textMisce"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/setting_color"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_done"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center_vertical"
            android:text="Add Image"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_web_link"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center_vertical"
            android:text="@string/add_url"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/delete_note"
            android:textColor="@color/colorDelete"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>
</LinearLayout>